--- a/css/style.css
+++ b/css/style.css
@@ -473,6 +473,23 @@ h6, .title-6 { font-size : 1.6rem; }
   margin: 48px;
 }
 
+.phun-title a .notif {
+  background-color: black;
+  opacity: 0.0;
+  position: absolute;
+  margin-left: 132px;
+  margin-top: -30px;
+  padding: 8px;
+  border-radius: 8px;
+  transition: all 0.6s ease;
+}
+
+.phun-title a:hover .notif {
+  opacity: 1.0;
+  margin-top: -52px;
+  color: white;
+}
+
 @media (min-width: 256px) {
   .grid > * > *,
   .grid > .line-full  > *   { flex: 0 0 100%;    }
